--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -13,6 +13,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: 'Create env file'
+        run: |
+          echo "${{ secrets.ENV_FILE }}" >> .env
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
